--- a/UaCH/localisation/uach_misc_l_english.yml
+++ b/UaCH/localisation/uach_misc_l_english.yml
@@ -32,6 +32,9 @@
  uach_slain_the_crimson_horse: "Slain the Crimson Horse"
  uach_gaining_a_foothold: "Gaining a Foothold"
  successful_interloper_intervention: "Successful Intervention"
+ uach_shah_rukhs_mausoleum: "Mausoleum of Shah Rukh Mirza"
+ uach_shah_rukhs_mausoleum_desecrated: "Shah Rukh's Mausoleum Desecrated"
+ uach_shah_rukhs_mausoleum_completed: "Shah Rukh's Mausoleum Completed"
 
  #decisions
  interloper_tr_conquest_0_title: "§GInterloper§!'s Conquest of Iraq-e Ajam"
