too lazy this is straight into master

--- a/UaCH/localisation/UaCH_events_l_english.yml
+++ b/UaCH/localisation/UaCH_events_l_english.yml
@@ -78,7 +78,7 @@
  UaCH.12.d: "§GSultan Muhammad§! has gathered the full might of the western empire behind him, but was repelled swiftly in this debacle. The bloody conflict seems to have ended with him being ran out of Isfahan, the local nobles executed, while the other princes and governors are holding feasts in victory. For how long, nobody is sure."
  UaCH.12.a: "Scorn them all."
  UaCH.15.t: "The body of Shah Rukh"
- UaCH.15.d: "Once the preparations have been done,§GShah Rukh’s§! body starts the journey east with §GGawhar Shad§! and §GAbdal-Latif§!, leaving the army behind in disarray."
+ UaCH.15.d: "With the preparations complete, §GShah Rukh’s§! body starts the journey east, accompanied by §GGawhar Shad§! and §GAbdal-Latif§!. This leaves our army behind in disarray."
  UaCH.15.a: "Send a small honor guard"
  UaCH.15.b: "A true heir should be able to handle this."
  UaCH.15.c: "Assemble the Royal guard!"
@@ -491,6 +491,9 @@
  UaCH.89.d:0 "Terrible news, sire! §GYar Ali§! has taken our capital, with the help of the traitors. Despite the desperate defence mounted by our artisans and craftsmen, his troops have broken the city and pillaged the palace!"
  UaCH.89.a:0 "A black day."
  UaCH.89.b:0 "Mount a counterattack!"
+ UaCH.90.t: "Revolt in Transoxiania"
+ UaCH.90.d: "Ulugh Beg has declared his rebellion against us. We must show him his place!"
+ UaCH.90.a: "To arms!"
  UaCH.91.t: "Fealty from [From.GetName]"
  UaCH.91.d: "The Lords of [From.GetName] have sworn to support our cause, and have chosen to become a loyal subject of ours."
  UaCH.91.a: "Their aid is appreciated!"
@@ -534,16 +537,16 @@
  UaCH.100.d: "Each victory on the battlefield brings us closer to Timur's Vision for the future. War is our natural state, and peace is a curse; we would do well to remember this fact."
  UaCH.100.a: "Who will we fight next?"
  
- UaCH.101.t"Poisoned wells"
- UaCH.101.d"Dire news, sire! The enemy has infilitrated our province, and has managed to poison the main well of the city, as well as our other water supplies! Without a source of fresh water, this will lead to a catastrophe!"
- UaCH.101.a"Send out the men to dig new wells."
- UaCH.101.b"Let the local emir handle it."
+ UaCH.101.t: "Poisoned wells"
+ UaCH.101.d: "Dire news, sire! The enemy has infilitrated our province, and has managed to poison the main well of the city, as well as our other water supplies! Without a source of fresh water, this will lead to a catastrophe!"
+ UaCH.101.a: "Send out the men to dig new wells."
+ UaCH.101.b: "Let the local emir handle it."
  
- UaCH.103.t"Religious clash"
- UaCH.103.d"There has been a clash between the Sunni and Shia followers in of our provinces. While the news are conflicting, it seems the tension between the two has not lessened even a bit."
- UaCH.103.a"Send in the guard"
- UaCH.103.b"Make concessions"
- UaCH.103.c"Only one faith is true!"
+ UaCH.103.t: "Religious clash"
+ UaCH.103.d: "There has been a clash between the Sunni and Shia followers in of our provinces. While the news are conflicting, it seems the tension between the two has not lessened even a bit."
+ UaCH.103.a: "Send in the guard"
+ UaCH.103.b: "Make concessions"
+ UaCH.103.c: "Only one faith is true!"
  
  UaCH.104.t: "Upon a Crimson Horse: Credits"
  UaCH.104.d: "From the developer team of Upon a Crimson Horse: Thank you for playing our mod! This mod was made as a part of the EU4 Modathon season 2 (Feb 2024), a 2-week modding competition. You will find other mods from the competition on our Steam Workshop page, please do check them out!\n\nCredits:\nInferno: Lead Developer, Research, Event Design and Implementation, UI Implementation\nXORME: All the Art, and the UI design\nSol_InvictusXLII: Civil War Mechanics Design and Implementation, Government Reform Mechanics Design and Implementation\nCetai: Research, Event Design and Implementation\nMinnator: Event Implementation, Casus Belli Implementation"
