so many have fallen at my hand

--- a/UaCH/localisation/uach_misc_l_english.yml
+++ b/UaCH/localisation/uach_misc_l_english.yml
@@ -61,3 +61,6 @@
  #TMs
  uach_reform_at_peace: "Timurids at Peace"
  uach_reform_at_war: "Timurids at War"
+
+ # Start
+ UPON_A_CRIMSON_HORSE: "Upon a Crimson Horse"
