no more decolonization
changed UaCH.95 "reward"
also, some nice easter eggs

--- a/UaCH/localisation/UaCH_events_l_english.yml
+++ b/UaCH/localisation/UaCH_events_l_english.yml
@@ -642,3 +642,4 @@
  UaCH.CB.1.b: "Replace him with a favorite of our Ulama."
  UaCH.CB.1.c: "Replace him with an important local."
  UaCH.CB.1.d: "Leave the ruler in charge."
+ nobody_lives_here_anymore_drought:0"This place reeks of death, there's a chill in the air."
