--- a/UaCH/localisation/UaCH_ideas_l_english.yml
+++ b/UaCH/localisation/UaCH_ideas_l_english.yml
@@ -434,10 +434,10 @@
  U20_ideas_start:0"Yasuj traditions"
  U20_ideas_bonus:0"Yasuj ambition"
  U20_ideas:0"Yasuj ideas"
- U20_idea_1:0"Yasuj idea 1"
- U20_idea_1_desc:0"Yasuj idea 1"
- U20_idea_2:0"Yasuj idea 2"
- U20_idea_2_desc:0"Yasuj idea 4"
+ U20_idea_1:0"Yasuo idea 1"
+ U20_idea_1_desc:0"Why are there no closed doors in Runeterra?"
+ U20_idea_2:0"Yasuo idea 2"
+ U20_idea_2_desc:0"Cause Yasuo hasakey."
  U20_idea_3:0"Yasuj idea 5"
  U20_idea_3_desc:0"Yasuj idea 6"
  U20_idea_4:0"Yasuj idea 7"
@@ -686,8 +686,8 @@
  U34_ideas_start:0"Kabul traditions"
  U34_ideas_bonus:0"Kabul ambition"
  U34_ideas:0"Kabul ideas"
- U34_idea_1:0"Kabul idea 1"
- U34_idea_1_desc:0"Kabul idea 1"
+ U34_idea_1:0"Babur's Gate"
+ U34_idea_1_desc:0"Kabul is a horrible place to start your adventure."
  U34_idea_2:0"Kabul idea 2"
  U34_idea_2_desc:0"Kabul idea 4"
  U34_idea_3:0"Kabul idea 5"
@@ -812,7 +812,7 @@
  U41_ideas_start:0"Tun traditions"
  U41_ideas_bonus:0"Tun ambition"
  U41_ideas:0"Tun ideas"
- U41_idea_1:0"Tun idea 1"
+ U41_idea_1:0"Tun tun tun"
  U41_idea_1_desc:0"Tun idea 1"
  U41_idea_2:0"Tun idea 2"
  U41_idea_2_desc:0"Tun idea 4"
@@ -1004,8 +1004,8 @@
  U51_idea_5_desc:0"Baghlan idea 5"
  U51_idea_6:0"Baghlan idea 6"
  U51_idea_6_desc:0"Baghlan idea 6"
- U51_idea_7:0"Baghlan idea 7"
- U51_idea_7_desc:0"Baghlan idea 7"
+ U51_idea_7:0"Ghor's Hammer"
+ U51_idea_7_desc:0"Whoever possesses Ghor's Hammer, if worthy, gains some really awesome shit."
 
  U52_ideas_start:0"Bamyan traditions"
  U52_ideas_bonus:0"Bamyan ambition"
@@ -1081,8 +1081,8 @@
 
  U56_ideas_start:0"Kulob traditions"
  U56_ideas_bonus:0"Kulob ambition"
- U56_ideas:0"Kulob ideas"
- U56_idea_1:0"Kulob idea 1"
+ U56_ideas:0"Coulomb ideas"
+ U56_idea_1:0"1,602176634x10-19"
  U56_idea_1_desc:0"Kulob idea 1"
  U56_idea_2:0"Kulob idea 2"
  U56_idea_2_desc:0"Kulob idea 4"
