Localizing lifespan modifier

--- a/UaCH/localisation/UaCH_events_l_english.yml
+++ b/UaCH/localisation/UaCH_events_l_english.yml
@@ -27,7 +27,8 @@
  mnt_speeds_up_disaster: "§RThe collapes will happen faster once Shah Rukh dies.§!"
  mnt_gawhar_shad_will_puppet_ruler: "Upon Shah Rukh's death, his successor will be influenced by Gawhar Shad."
  mnt_gawhar_and_military_will_rebel_on_monarch_death: "§RGawhar Shad will rebel against the successor with the help of the nobility§!"
- mnt_one_small_suffering: "Small scuffle"
+ mnt_one_small_suffering: "Small Scuffle"
+ mnt_livespan_increaes: "Shah Rukh's Grasp on Power"
  
  UaCH.5.t: "Illness of Muhammad Juki"
  UaCH.5.d: "Today, the gravest of news have reached the court. The Prince of §YBalkh§!, §GMuhammad Juki§! has became sick with some unknown malady. There are a few testifying the ongoing circumstances of this mystery illness, citing it is chronic, but there are no reliable witnesses to be found."
