More PO loc fixes

--- a/UaCH/localisation/UaCH_events_l_english.yml
+++ b/UaCH/localisation/UaCH_events_l_english.yml
@@ -61,11 +61,11 @@
  cb_rebellion_of_sultan_muhammad: "Rebellion"
  uach_send_demands: "§GSultan Muhammad§! will send demands to the other princes and governors to submit."
  REBELLION_OF_SULTAN_MUHAMMAD: "§GSultan Muhammad's§! Rebellion"
- PEACE_po_shah_rukhs_rule:0 "Shah Rukh's Rule"
- CB_ALLOWED_po_shah_rukhs_rule:0 "Shah Rukh's Rule"
+ PEACE_po_shah_rukhs_rule:0 "§YShah Rukh's Rule§!"
+ CB_ALLOWED_po_shah_rukhs_rule:0 "§YShah Rukh's Rule§!"
  po_shah_rukhs_rule_desc:0 "@QOM §YAjam§! will be forcefully integrated, and §GSultan Muhammad§! will flee to @LRI §YLuristan§!."
- PEACE_po_take_our_place:0 "Take Our Place"
- CB_ALLOWED_po_take_our_place:0 "Take Our Place"
+ PEACE_po_take_our_place:0 "§YTake Our Place§!"
+ CB_ALLOWED_po_take_our_place:0 "§YTake Our Place§!"
  po_take_our_place_desc:0 "We will become the true heir of the @TIM §YTimurids§!, inheriting them and all their woes."
  
  UaCH.9.t: "Muhammads demands"
