--- a/UaCH/localisation/uach_war_l_english.yml
+++ b/UaCH/localisation/uach_war_l_english.yml
@@ -9,16 +9,16 @@
  cb_enforce_loyalty_governor_desc: "Enforce the loyalty of a governor to the Timurid Empire"
  w_enforce_loyalty_governor: "Enforce Loyalty"
  w_enforce_loyalty_governor_desc: "Enforce the loyalty of a governor to the Timurid Empire"
- PEACE_po_make_governor: "Enforce Loyalty"
- CB_ALLOWED_po_make_governor: "Enforce Loyalty"
- po_make_governor_desc: "The loyalty of a governor has been enforced"
+ PEACE_po_make_governor: "§YEnforce Loyalty§!"
+ CB_ALLOWED_po_make_governor: "§YEnforce Loyalty§!"
+ po_make_governor_desc: "The loyalty of a governor has been enforced. They will become our §YEmirate§! once more."
 
 # CHALLENGE_CLAIMANT_WAR
  SUPERIORITY_CLAIMANT_WAR: "$FIRST$-$SECOND$ War for Claimant Superiority"
  cb_challange_claimant: "Claimant Superiority War"
  cb_challange_claimant_desc: "Challenge the claimant to the throne of the Timurid Empire"
  w_superiority_claimant: "Show Superiority"
- w_superiority_claimant_desc: "Show your superiority over the claimant to the throne of the Timurid Empire"
- PEACE_po_defeated_claimant: "Subdue Claimant"
- CB_ALLOWED_po_defeated_claimant: "Subdue Claimant"
- po_defeated_claimant_desc: "The claimant to the throne of the Timurid Empire has been defeated"
+ w_superiority_claimant_desc: "The war goal is to win battles."
+ PEACE_po_defeated_claimant: "§YSubdue Claimant§!"
+ CB_ALLOWED_po_defeated_claimant: "§YSubdue Claimant§!"
+ po_defeated_claimant_desc: "The claimant to the throne of the Timurid Empire has been defeated. They will become our §YEmirate§! once more."
