--- a/UaCH/localisation/UaCH_events_l_english.yml
+++ b/UaCH/localisation/UaCH_events_l_english.yml
@@ -649,8 +649,14 @@
  uach_state_above_clan: "State above Clan"
  UaCH.CB.1.t: "Victorious Conquest"
  UaCH.CB.1.d: "We have just defeated a rival claimant. Now, it is up to us to decide what to do with their ruler."
- UaCH.CB.1.a: "Replace him with one of our loyal nobles."
- UaCH.CB.1.b: "Replace him with a favorite of our Ulama."
- UaCH.CB.1.c: "Replace him with an important local."
+ UaCH.CB.1.a: "Replace him with an important local."
+ uach_enforced_burgher_ruler: "Enforced Burgher Ruler"
+ desc_uach_enforced_burgher_ruler: ""
+ UaCH.CB.1.b: "Replace him with one of our loyal nobles."
+ uach_enforced_noble_ruler: "Enforced Noble"
+ desc_uach_enforced_noble_ruler: ""
+ UaCH.CB.1.c: "Replace him with a favorite of our Ulema."
+ uach_enforced_church_ruler: "Enforced Church Ruler"
+ desc_uach_enforced_church_ruler: ""
  UaCH.CB.1.d: "Leave the ruler in charge."
  nobody_lives_here_anymore_drought:0"Abandoned city"
