--- a/UaCH/localisation/UaCH_countries_l_english.yml
+++ b/UaCH/localisation/UaCH_countries_l_english.yml
@@ -5,7 +5,7 @@
  KHU: "Khutallan"
  KHU_ADJ: "Khutal"
  KHU_ADJ2: "Khutal"
- BDK: "Badakhstan"
+ BDK: "Badakshan"
  BDK_ADJ: "Badakh"
  BDK_ADJ2: "Badakh"
  SLU: "Salor"
